# concert-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  venues.example.yaml  venues.yaml
output/: STL Concerts.ics
research/: RESEARCH_PLAN.md  venues_discovered.yaml
scheduling/: com.concert-scraper.plist  concert-scraper.cron  concert-scraper.service  concert-scraper.timer
src/concert_scraper/: __init__.py  calendar.py  cli.py  config.py  db.py  extractor.py  ics.py  merge.py  models.py  scraper.py
tests/: test_calendar.py  test_db.py  test_extractor.py  test_merge.py  test_models.py  test_scraper.py
